# simple_poetry_template

./: .gitignore  README.md  pyproject.toml
.github/: init.sh  rename_project.sh  template.yml
.github/workflows/: rename-project.yml
project_name/: config.py
