[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["alex.spok"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.5.3"
pre-commit = "^3.7.0"
jupyterlab = "^4.1.6"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project_name = 'project_name.__main__:main'
postinstall = "pre-commit:install"
